chandeliers-lus/tests/fail/ui/causality/redef-var-oo.stderr
error: Variable a is declared twice in node foo
 --> tests/fail/ui/causality/redef-var-oo.rs:2:35
  |
2 |     node foo() returns (a : bool; a : int);
  |                                   ^
